fix find all eco news tags for management, update sort by time

--- a/core/src/main/resources/templates/core/management_eco_news.html
+++ b/core/src/main/resources/templates/core/management_eco_news.html
@@ -237,11 +237,11 @@
                                 <th>
                                     <div class="table-header-container">
                                         <span class="header-text">[[#{greenCity.pages.table.time}]]</span>
-                                        <span onclick="orderByNameField('asc', 'time')">
+                                        <span onclick="orderByNameField('asc', 'creationDate')">
                                             <i class="material-icons" data-toggle="tooltip"
                                                th:title="#{greenCity.pages.table.ascending}">&#xE5D8;</i>
                                         </span>
-                                        <span onclick="orderByNameField('desc', 'time')">
+                                        <span onclick="orderByNameField('desc', 'creationDate')">
                                             <i class="material-icons" data-toggle="tooltip"
                                                th:title="#{greenCity.pages.table.descending}">&#xE5DB;</i>
                                         </span>
