--- a/core/src/main/resources/templates/core/management_achievement.html
+++ b/core/src/main/resources/templates/core/management_achievement.html
@@ -25,8 +25,8 @@
     <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
 </head>
 <body>
-<div id="header" th:insert="core/header"></div>
-<div id="sidebar" th:insert="core/sidepanel"></div>
+<div id="header" th:insert="~{core/header}"></div>
+<div id="sidebar" th:insert="~{core/sidepanel}"></div>
 <div class="main-content">
     <div class="container-xl">
         <div class="table-responsive">
@@ -66,7 +66,8 @@
                                 </span>
                         </th>
                         <th>[[#{greenCity.pages.table.id}]]</th>
-                        <th>[[#{greenCity.pages.table.translations}]]</th>
+                        <th>[[#{greenCity.pages.table.title}]]</th>
+                        <th>[[#{greenCity.pages.table.name}]]</th>
                         <th>[[#{greenCity.pages.table.achievement.category}]]</th>
                         <th>[[#{greenCity.pages.table.condition}]]</th>
                         <th>[[#{greenCity.pages.table.actions}]]</th>
@@ -85,28 +86,10 @@
                                         </span>
                             </td>
                             <td th:text="${allAchievements.getId()}"></td>
+                            <td th:text="${allAchievements.getTitle()}"></td>
                             <td>
-                                <table class="table table-borderless m-0">
-                                    <thead>
-                                    <tr class="table-secondary">
-                                        <th style="width: 8%">[[#{greenCity.pages.table.translation.id}]]</th>
-                                        <th style="width: 12%">[[#{greenCity.pages.table.title}]]</th>
-                                        <th style="width: 20%">[[#{greenCity.pages.table.description}]]</th>
-                                        <th style="width: 60%">[[#{greenCity.pages.table.message}]]</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <th:block
-                                            th:each="translation : ${pageable.getPage().get(iterStatus.index).getTranslations()}">
-                                        <tr>
-                                            <td th:text="${translation.getId()}"></td>
-                                            <td th:text="${translation.getTitle()}"></td>
-                                            <td th:text="${translation.getDescription()}"></td>
-                                            <td th:text="${translation.getMessage()}"></td>
-                                        </tr>
-                                    </th:block>
-                                    </tbody>
-                                </table>
+                                <span th:text="${allAchievements.getName()}"></span><br>
+                                <span th:text="${allAchievements.getNameEng()}"></span>
                             </td>
                             <td th:text="${allAchievements.getAchievementCategory().getName()}"></td>
                             <td th:text="${allAchievements.getCondition()}"></td>
@@ -175,74 +158,39 @@
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <input type="hidden" class="form-control" name="id" value="-1" readonly required>
-                        <th:block th:each="language, iterInfo : ${languages}">
-                            <div class="row">
-                                <div class="col">
-                                    <div class="form-group">
-                                        <label>[[#{greenCity.pages.table.language.id}]]</label>
-                                        <input class="form-control" readonly required
-                                               th:name="${language.getId()}" th:value="${language.getId()}"
-                                               type="text"/>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="form-group">
-                                        <label>[[#{greenCity.pages.popup.language.code}]]</label>
-                                        <input class="form-control" readonly required
-                                               th:name="${language.getCode()}" th:value="${language.getCode()}"
-                                               type="text"/>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-group">
-                                        <label>[[#{greenCity.pages.table.title}]]</label>
-                                        <textarea class="form-control"
-                                                  th:name="title+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                  type="text"></textarea>
-                                        <span class="errorSpan"
-                                              th:id="'errorModalSavetranslations['+${iterInfo.index}+'].title'"></span>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-group">
-                                        <label>[[#{greenCity.pages.table.description}]]</label>
-                                        <textarea class="form-control"
-                                                  th:name="description+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                  type="text"></textarea>
-                                        <span class="errorSpan"
-                                              th:id="'errorModalSavetranslations['+${iterInfo.index}+'].description'"></span>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-group">
-                                        <label>[[#{greenCity.pages.table.message}]]</label>
-                                        <textarea class="form-control"
-                                                  th:name="message+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                  type="text"></textarea>
-                                        <span class="errorSpan"
-                                              th:id="'errorModalSavetranslations['+${iterInfo.index}+'].message'"></span>
-                                    </div>
+                        <div class="form-group">
+                            <label>[[#{greenCity.pages.table.title}]]</label>
+                            <input type="text" class="form-control" name="title" required>
+                        </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>[[#{greenCity.pages.table.name}]] UA</label>
+                                    <input type="text" class="form-control" name="name" required>
                                 </div>
                             </div>
-                        </th:block>
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>[[#{greenCity.pages.table.name}]] EN</label>
+                                    <input type="text" class="form-control" name="nameEng" required>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="form-group">
                             <label>[[#{greenCity.pages.table.achievement.category}]]</label>
                             <select class="form-control" name="achievementCategory">
                                 <option selected="selected" id="empty-category"></option>
                                 <th:block th:each="category : ${categoryList}">
-                                    <tr>
-                                        <option>
-                                            <td th:text="${category.getName()}"></td>
-                                        </option>
-                                    </tr>
+                                    <option th:value="${category.getName()}" th:text="${category.getName()}"></option>
                                 </th:block>
                             </select>
                             <span th:id="errorModalSavecategory" class="errorSpan"></span>
                         </div>
                         <div class="form-group">
                             <label>[[#{greenCity.pages.table.condition}]]</label>
-                            <input class="form-control" name="condition" required type="number">
+                            <input type="number" class="form-control" name="condition" required>
                             <span th:id="errorModalSavecondition" class="errorSpan"></span>
                         </div>
                     </div>
@@ -260,7 +208,7 @@
     <div id="editAchievementModal" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form id="editAchievementForm">
+                <form th:action="@{management/achievement/update}" method="post" id="editAchievementForm">
                     <div class="modal-header">
                         <h4 class="modal-title">[[#{greenCity.achievement.page.edit.achievement}]]</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -271,80 +219,48 @@
                             <input type="text" class="form-control" id="id" name="id" readonly required>
                             <span th:id="errorModalUpdateid" class="errorSpan"></span>
                         </div>
-                        <th:block th:each="language, iterInfo : ${languages}">
-                            <div class="row">
-                                <div class="col">
-                                    <div class="form-group">
-                                        <label>[[#{greenCity.pages.table.language.id}]]</label>
-                                        <input class="form-control" readonly required
-                                               th:name="${language.getId()}" th:value="${language.getId()}"
-                                               type="text"/>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="form-group">
-                                        <label>[[#{greenCity.pages.popup.language.code}]]</label>
-                                        <input class="form-control" readonly required
-                                               th:name="${language.getCode()}" th:value="${language.getCode()}"
-                                               type="text"/>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-group">
-                                        <label>[[#{greenCity.pages.table.title}]]</label>
-                                        <textarea class="form-control"
-                                                  th:id="title+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                  th:name="title+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                  type="text"></textarea>
-                                        <span class="errorSpan"
-                                              th:id="'errorModalUpdatetranslations['+${iterInfo.index}+'].title'"></span>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-group">
-                                        <label>[[#{greenCity.pages.table.description}]]</label>
-                                        <textarea class="form-control"
-                                                  th:id="description+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                  th:name="description+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                  type="text"></textarea>
-                                        <span class="errorSpan"
-                                              th:id="'errorModalUpdatetranslations['+${iterInfo.index}+'].description'"></span>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-group">
-                                        <label>[[#{greenCity.pages.table.message}]]</label>
-                                        <textarea class="form-control"
-                                                  th:id="message+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                  th:name="message+${'_' + language.getId()+'_'}+${language.getCode()}"
-                                                  type="text"></textarea>
-                                        <span class="errorSpan"
-                                              th:id="'errorModalUpdatetranslations['+${iterInfo.index}+'].message'"></span>
-                                    </div>
+
+                        <div class="form-group">
+                            <label>[[#{greenCity.pages.table.title}]]</label>
+                            <input type="text" class="form-control" name="title" required>
+                        </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>[[#{greenCity.pages.table.name}]] UA</label>
+                                    <input type="text" class="form-control" name="name" required>
                                 </div>
                             </div>
-                        </th:block>
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>[[#{greenCity.pages.table.name}]] EN</label>
+                                    <input type="text" class="form-control" name="nameEng" required>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="form-group">
                             <label>[[#{greenCity.pages.table.achievement.category}]]</label>
-                            <input type="text" class="form-control" id="achievementCategory" name="achievementCategory"
-                                   readonly required>
-                            <th:block th:each="category : ${categoryList}">
-                                <tr>
-                                    <td th:text="${category.getName()}"></td>
-                                </tr>
-                            </th:block>
+                            <select class="form-control" name="achievementCategory" required>
+                                <option selected="selected"></option>
+                                <th:block th:each="category : ${categoryList}">
+                                    <option th:value="${category.getName()}" th:text="${category.getName()}"></option>
+                                </th:block>
+                            </select>
                             <span th:id="errorModalUpdatecategory" class="errorSpan"></span>
                         </div>
+
                         <div class="form-group">
                             <label>[[#{greenCity.pages.table.condition}]]</label>
-                            <input class="form-control" id="condition" name="condition" required type="number">
+                            <input type="number" class="form-control" name="condition" required>
                             <span th:id="errorModalUpdatecondition" class="errorSpan"></span>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal"
                                th:value="#{greenCity.pages.popup.cancel.}">
-                        <input type="submit" class="btn btn-info btn-primary" th:value="#{greenCity.pages.popup.save.}"
+                        <input type="submit" class="btn btn-success btn-primary" th:value="#{greenCity.pages.popup.save.}"
                                id="submitEditBtn">
                     </div>
                 </form>
@@ -400,6 +316,6 @@
         </div>
     </div>
 </div>
-<div id="footer" th:insert="core/footer"></div>
+<div id="footer" th:insert="~{core/footer}"></div>
 </body>
 </html>
