--- a/core/src/main/resources/templates/core/management_shopping_list_items.html
+++ b/core/src/main/resources/templates/core/management_shopping_list_items.html
@@ -25,8 +25,8 @@
     <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
 </head>
 <body>
-<div id="header" th:insert="core/header"></div>
-<div id="sidebar" th:insert="core/sidepanel"></div>
+<div id="header" th:insert="~{core/header}"></div>
+<div id="sidebar" th:insert="~{core/sidepanel}"></div>
 <div class="main-content">
     <div class="container-xl">
         <div class="table-responsive">
@@ -312,6 +312,6 @@
         </div>
     </div>
 </div>
-<div id="footer" th:insert="core/footer"></div>
+<div id="footer" th:insert="~{core/footer}"></div>
 </body>
 </html>
